@@ -23,8 +23,8 @@ import org.elasticsearch.index.IndexVersion;
 import org.elasticsearch.indices.EmptySystemIndices;
 import org.elasticsearch.test.ESTestCase;
 
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.List;
+import java.util.Map;
 
 import static org.hamcrest.Matchers.equalTo;
 
@@ -40,7 +40,7 @@ public class LifecyclePolicyUtilsTests extends ESTestCase {
             ClusterState state = ClusterState.builder(new ClusterName("mycluster")).build();
             assertThat(
                 LifecyclePolicyUtils.calculateUsage(iner, state, "mypolicy"),
-                equalTo(new ItemUsage(Collections.emptyList(), Collections.emptyList(), Collections.emptyList()))
+                equalTo(new ItemUsage(List.of(), List.of(), List.of()))
             );
         }
 
@@ -52,7 +52,7 @@ public class LifecyclePolicyUtilsTests extends ESTestCase {
                         .putCustom(
                             IndexLifecycleMetadata.TYPE,
                             new IndexLifecycleMetadata(
-                                Collections.singletonMap("mypolicy", LifecyclePolicyMetadataTests.createRandomPolicyMetadata("mypolicy")),
+                                Map.of("mypolicy", LifecyclePolicyMetadataTests.createRandomPolicyMetadata("mypolicy")),
                                 OperationMode.RUNNING
                             )
                         )
@@ -61,7 +61,7 @@ public class LifecyclePolicyUtilsTests extends ESTestCase {
                 .build();
             assertThat(
                 LifecyclePolicyUtils.calculateUsage(iner, state, "mypolicy"),
-                equalTo(new ItemUsage(Collections.emptyList(), Collections.emptyList(), Collections.emptyList()))
+                equalTo(new ItemUsage(List.of(), List.of(), List.of()))
             );
         }
 
@@ -73,7 +73,7 @@ public class LifecyclePolicyUtilsTests extends ESTestCase {
                         .putCustom(
                             IndexLifecycleMetadata.TYPE,
                             new IndexLifecycleMetadata(
-                                Collections.singletonMap("mypolicy", LifecyclePolicyMetadataTests.createRandomPolicyMetadata("mypolicy")),
+                                Map.of("mypolicy", LifecyclePolicyMetadataTests.createRandomPolicyMetadata("mypolicy")),
                                 OperationMode.RUNNING
                             )
                         )
@@ -86,7 +86,7 @@ public class LifecyclePolicyUtilsTests extends ESTestCase {
                 .build();
             assertThat(
                 LifecyclePolicyUtils.calculateUsage(iner, state, "mypolicy"),
-                equalTo(new ItemUsage(Collections.singleton("myindex"), Collections.emptyList(), Collections.emptyList()))
+                equalTo(new ItemUsage(List.of("myindex"), List.of(), List.of()))
             );
         }
 
@@ -98,7 +98,7 @@ public class LifecyclePolicyUtilsTests extends ESTestCase {
                         .putCustom(
                             IndexLifecycleMetadata.TYPE,
                             new IndexLifecycleMetadata(
-                                Collections.singletonMap("mypolicy", LifecyclePolicyMetadataTests.createRandomPolicyMetadata("mypolicy")),
+                                Map.of("mypolicy", LifecyclePolicyMetadataTests.createRandomPolicyMetadata("mypolicy")),
                                 OperationMode.RUNNING
                             )
                         )
@@ -109,10 +109,10 @@ public class LifecyclePolicyUtilsTests extends ESTestCase {
                         .putCustom(
                             ComposableIndexTemplateMetadata.TYPE,
                             new ComposableIndexTemplateMetadata(
-                                Collections.singletonMap(
+                                Map.of(
                                     "mytemplate",
                                     ComposableIndexTemplate.builder()
-                                        .indexPatterns(Collections.singletonList("myds"))
+                                        .indexPatterns(List.of("myds"))
                                         .template(
                                             new Template(
                                                 Settings.builder().put(LifecycleSettings.LIFECYCLE_NAME, "mypolicy").build(),
@@ -130,7 +130,7 @@ public class LifecyclePolicyUtilsTests extends ESTestCase {
                 .build();
             assertThat(
                 LifecyclePolicyUtils.calculateUsage(iner, state, "mypolicy"),
-                equalTo(new ItemUsage(Collections.singleton("myindex"), Collections.emptyList(), Collections.singleton("mytemplate")))
+                equalTo(new ItemUsage(List.of("myindex"), List.of(), List.of("mytemplate")))
             );
         }
 
@@ -139,7 +139,7 @@ public class LifecyclePolicyUtilsTests extends ESTestCase {
                 .putCustom(
                     IndexLifecycleMetadata.TYPE,
                     new IndexLifecycleMetadata(
-                        Collections.singletonMap("mypolicy", LifecyclePolicyMetadataTests.createRandomPolicyMetadata("mypolicy")),
+                        Map.of("mypolicy", LifecyclePolicyMetadataTests.createRandomPolicyMetadata("mypolicy")),
                         OperationMode.RUNNING
                     )
                 )
@@ -159,10 +159,10 @@ public class LifecyclePolicyUtilsTests extends ESTestCase {
                 .putCustom(
                     ComposableIndexTemplateMetadata.TYPE,
                     new ComposableIndexTemplateMetadata(
-                        Collections.singletonMap(
+                        Map.of(
                             "mytemplate",
                             ComposableIndexTemplate.builder()
-                                .indexPatterns(Collections.singletonList("myds"))
+                                .indexPatterns(List.of("myds"))
                                 .template(
                                     new Template(Settings.builder().put(LifecycleSettings.LIFECYCLE_NAME, "mypolicy").build(), null, null)
                                 )
@@ -172,15 +172,13 @@ public class LifecyclePolicyUtilsTests extends ESTestCase {
                     )
                 );
             // Need to get the real Index instance of myindex:
-            mBuilder.put(DataStreamTestHelper.newInstance("myds", Collections.singletonList(mBuilder.get("myindex").getIndex())));
+            mBuilder.put(DataStreamTestHelper.newInstance("myds", List.of(mBuilder.get("myindex").getIndex())));
 
             // Test where policy exists and is used by an index, datastream, and template
             ClusterState state = ClusterState.builder(new ClusterName("mycluster")).metadata(mBuilder.build()).build();
             assertThat(
                 LifecyclePolicyUtils.calculateUsage(iner, state, "mypolicy"),
-                equalTo(
-                    new ItemUsage(Arrays.asList("myindex", "another"), Collections.singleton("myds"), Collections.singleton("mytemplate"))
-                )
+                equalTo(new ItemUsage(List.of("myindex", "another"), List.of("myds"), List.of("mytemplate")))
             );
         }
     }
